--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <input type="checkbox" id="remember">
         <label for="remember">remember me</label>
         <p>forget password? <a href="#">click here</a></p>
-        <p>new to here? <a href="https://wellyfy-wd02-mb2.netlify.app/login/login.html">create your account now</a></p>
+        <p>new to here? <a href="#">create your account now</a></p>
     </form>
 
 </div>
